[package]
name = "gtdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
shuttle-runtime = { version = "0.18.0" }
shuttle-axum = { version = "0.18.0" }
shuttle-aws-rds = { version = "0.18.0", features = ["mysql"]}
tokio = { version = "1.28.2", features = ["macros"] }
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
